[gd_scene load_steps=4 format=3 uid="uid://bl4lmx6dj7dp2"]

[ext_resource type="Script" path="res://scripts/ui/screens/DungeonScreen.gd" id="1_3vkns"]

[sub_resource type="Gradient" id="Gradient_bg"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.08, 0.06, 0.12, 1, 0.12, 0.1, 0.18, 1, 0.06, 0.04, 0.1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="DungeonScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vkns")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")
expand_mode = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 650.0
offset_right = 97.0
offset_bottom = 690.0
text = "Back"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "DUNGEONS SANCTUM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="ScheduleInfo" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="ScheduleTitleLabel" type="Label" parent="MainContainer/LeftPanel/ScheduleInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
text = "TODAY'S SCHEDULE"
horizontal_alignment = 1

[node name="ScheduleLabel" type="Label" parent="MainContainer/LeftPanel/ScheduleInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.55, 1)
text = "Loading..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer/LeftPanel"]
layout_mode = 2

[node name="CategoryTabs" type="TabContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Elemental" type="ScrollContainer" parent="MainContainer/LeftPanel/CategoryTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ElementalDungeonList" type="VBoxContainer" parent="MainContainer/LeftPanel/CategoryTabs/Elemental"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Pantheon" type="ScrollContainer" parent="MainContainer/LeftPanel/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="PantheonDungeonList" type="VBoxContainer" parent="MainContainer/LeftPanel/CategoryTabs/Pantheon"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Equipment" type="ScrollContainer" parent="MainContainer/LeftPanel/CategoryTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="EquipmentDungeonList" type="VBoxContainer" parent="MainContainer/LeftPanel/CategoryTabs/Equipment"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DungeonInfoPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0

[node name="InfoContainer" type="VBoxContainer" parent="MainContainer/DungeonInfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DungeonNameLabel" type="Label" parent="MainContainer/DungeonInfoPanel/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
text = "Select a Dungeon"
horizontal_alignment = 1

[node name="DungeonDescription" type="RichTextLabel" parent="MainContainer/DungeonInfoPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Select a dungeon from the left to see details"

[node name="DifficultyContainer" type="HBoxContainer" parent="MainContainer/DungeonInfoPanel/InfoContainer"]
layout_mode = 2

[node name="RewardsContainer" type="VBoxContainer" parent="MainContainer/DungeonInfoPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnterButton" type="Button" parent="MainContainer/DungeonInfoPanel/InfoContainer"]
layout_mode = 2
text = "Select Dungeon"
disabled = true
